--- a/index.html
+++ b/index.html
@@ -48,20 +48,20 @@
     <div class="paras "> <p class="sectionTag text-big">Education is everyone's right.</p>
       <p class="sectionSubTag text-small">India has made great strides in improving access to quality education, increasing elementary school enrollment and reducing the number of out-of-school children.These achievements have been bolstered by key laws, policies and programmes such as the Right of Children to Free and Compulsory Education (RTE) Act (2009), the National Early Childhood Care and Education (ECCE) Policy (2013). However, challenges do remain and at EDUTECH we want to leap forward indian population  by providing them best education via modern technology and strengthen india's one of the key pillars.</p></div>
    
-    <div class="thumbnail"><img src="online-study2.avif", alt="Error in displaying latop  image."></div>
+    <div class="thumbnail"><img src="https://source.unsplash.com/random/900×900/?coding,laptop,web", alt="Error in displaying latop  image."></div>
   </section>
   <section class="section section-left">
     <div class="paras "> <p class="sectionTag text-big">Boosting the mass consciousness</p>
       <p class="sectionSubTag text-small">Education is the key to enhance our self-conscouness.
         Mindful learning and peaceful education encourage greater consciousness for oneself and one's environment which allows for learners to be more conscious of their thoughts and actions.It also helps society become more understandable and adaptable with people of different strata. By our learning societal learning program initiative, we teach the young kids how to be compassionate and sensible. We als encourage daily jobs to youngsters so their consciouness increases and they have a clean and clear understanding of the environment.</p></div>
    
-    <div class="thumbnail"><img src="online-study1.avif", alt="Error in displaying latop  image."></div>
+    <div class="thumbnail"><img src="https://source.unsplash.com/random/900×900/?coding,smart", alt="Error in displaying latop  image."></div>
   </section>
   <section class="section">
     <div class="paras "> <p class="sectionTag text-big">EDUTECH is commited to make people reach  their full  potential.</p>
       <p class="sectionSubTag text-small">At EDUTECH, we provide state of the art technology and also provide specialised trainers of their respective fields who work on development  of youngsters in a particular field. So they can reach their maximum potential and outmatch their competitors. we don't believe in running in competition but becoming the competition oneself. By our EDUTECH prakram program we will make champions from different  fields and keep on raising bar, so that the growth trajectory of indian society takes an exponential turn and ultimately reach the sky.</p></div>
    
-    <div class="thumbnail"><img src="online-study3.avif", alt="Error in displaying latop  image."></div>
+    <div class="thumbnail"><img src="https://source.unsplash.com/random/900×900/?coding,laptop,circuits", alt="Error in displaying latop  image."></div>
   </section>
   <hr>
   <section class="contact" id="contact">
